--- a/assets/scss/_theme_styles.scss
+++ b/assets/scss/_theme_styles.scss
@@ -710,7 +710,8 @@ textarea {
     line-height: 140%;
     float: right;
     font-family: "Roboto", "Noto", "Helvetica", "Arial", sans-serif;
-    font-size: 20px;
+    font-size: 19px;
+    font-weight: 300;
     color: rgba(0,0,0,0.87);
 }
 
@@ -1080,6 +1081,17 @@ main.container {
     background-color: #ffffff;
 }
 
+.category-description {
+	border-radius: 2px;
+    background: #fff;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    padding: 32px;
+    margin-bottom: 40px;
+    & p {
+      margin: 0;
+    }
+}
+
 /* #single */
 h1.entry-title {
     font-size: 34px;
@@ -1291,6 +1303,10 @@ h1.entry-title {
     margin-top: 0;
 }
 
+.nocomments {
+  padding: 32px;
+}
+
 /* #Sidebar & Widgets */
 #sidebar-container {
     width: 25%;
@@ -1351,6 +1367,22 @@ h1.entry-title {
     display: none;
 }
 
+/* Calendar */
+
+#wp-calendar {
+    width: 100%;
+    & td, & th {
+      padding: 0;
+      text-align: center;
+    }
+    & #prev {
+      text-align: left;
+    }
+    & #next {
+      text-align: right;
+    }
+}
+
 /* #Footer */
 #footer {
     position: relative;
@@ -1360,10 +1392,12 @@ h1.entry-title {
 
 #footer ul {
     margin-bottom: 0;
+    font-size: 0;
 }
 
 #footer .widget {
     width: 25%;
+    font-size: 13px;
     padding-left: 2.08333333%;
     padding-right: 2.08333333%;
     margin: 0;
