--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ Author: Iceable Media
 Author URI: https://www.iceablethemes.com
 License: GNU General Public License v2 (GPLv2)
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Version: 0.9
-Tags: black, blue, brown, gray, green, orange, pink, purple, red, silver, tan, white, yellow, dark, light, one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar, fluid-layout, fixed-layout, responsive-layout, custom-background, custom-colors, custom-menu, editor-style, featured-images, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready
+Version: 1.0.0
+Tags: one-column, two-columns, right-sidebar, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, blog, news, entertainment
+Text Domain: materia-lite
 
 Materia Lite WordPress Theme by Iceable Themes | https://www.iceablethemes.com
 */
