--- a/assets/scss/_theme_styles.scss
+++ b/assets/scss/_theme_styles.scss
@@ -1097,6 +1097,10 @@ h1.entry-title {
     font-size: 34px;
 }
 
+.entry-content {
+  overflow: auto;
+}
+
 /* Thumbnail */
 #single-container .thumbnail {
     padding: 32px 32px 0 32px;
