--- a/css/materia.dev.css
+++ b/css/materia.dev.css
@@ -1803,6 +1803,10 @@ h1.entry-title {
     font-size: 34px;
 }
 
+.entry-content {
+    overflow: auto;
+}
+
 /* Thumbnail */
 #single-container .thumbnail {
     padding: 32px 32px 0 32px;
