2017-07-31 Added styling for HTML5 gallery
* Added: Default styling and column support for gallery

--- a/css/materia.dev.css
+++ b/css/materia.dev.css
@@ -1825,6 +1825,54 @@ h1.entry-title {
     color: rgba(0, 0, 0, 0.87);
 }
 
+/* Gallery */
+.gallery-item {
+    display: inline-block;
+    vertical-align: top;
+    margin: 10px auto 20px auto;
+    text-align: center;
+}
+
+.gallery-columns-1 .gallery-item {
+    width: 100%;
+}
+
+.gallery-columns-2 .gallery-item {
+    width: 50%;
+}
+
+.gallery-columns-3 .gallery-item {
+    width: 33.3333%;
+}
+
+.gallery-columns-4 .gallery-item {
+    width: 25%;
+}
+
+.gallery-columns-5 .gallery-item {
+    width: 20%;
+}
+
+.gallery-columns-6 .gallery-item {
+    width: 16.6666%;
+}
+
+.gallery-columns-7 .gallery-item {
+    width: 14.2857%;
+}
+
+.gallery-columns-8 .gallery-item {
+    width: 12.5%;
+}
+
+.gallery-columns-9 .gallery-item {
+    width: 11.1111%;
+}
+
+.gallery-columns-10 .gallery-item {
+    width: 10%;
+}
+
 /* Pages */
 .type-page.entry-wrap {
     padding: 32px 0;
