2017-07-31 Fixed search result display for custom post type
* Fixed: Custom post type display in search results

--- a/css/materia-unresponsive.dev.css
+++ b/css/materia-unresponsive.dev.css
@@ -712,6 +712,7 @@ figure figcaption,
 
 .cards,
 #navbar .sub-menu,
+.hentry,
 .post,
 .type-page,
 .comments,
@@ -1664,7 +1665,8 @@ main.container {
 
 /* #Index */
 .post,
-.type-page {
+.type-page,
+.hentry {
     background: #ffffff;
     margin-bottom: 40px;
 }
