--- a/css/materia.dev.css
+++ b/css/materia.dev.css
@@ -713,6 +713,7 @@ figure figcaption,
 
 .cards,
 #navbar .sub-menu,
+.hentry,
 .post,
 .type-page,
 .comments,
@@ -1665,7 +1666,8 @@ main.container {
 
 /* #Index */
 .post,
-.type-page {
+.type-page,
+.hentry {
     background: #ffffff;
     margin-bottom: 40px;
 }
