--- a/assets/scss/_theme_styles.scss
+++ b/assets/scss/_theme_styles.scss
@@ -10,6 +10,7 @@
 
 .cards,
 #navbar .sub-menu,
+.hentry,
 .post,
 .type-page,
 .comments,
@@ -961,7 +962,8 @@ main.container {
 
 /* #Index */
 .post,
-.type-page {
+.type-page,
+.hentry {
   background: #ffffff;
   margin-bottom: 40px;
 }
