First iteration of materia-lite-gutenberg
See README.md
* Forked Materia lite 1.0.9
* Added basic editor styles for Gutenberg
* Added custom color palette
* Added a dummy custom post type ('movie') with an example of template

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: Materia Lite
+Theme Name: Materia Lite Gutenberg
 Theme URI: https://www.iceablethemes.com/shop/materia-lite/
-Description: A material design inspired WordPress Theme.
+Description: A material design inspired WordPress Theme - With experimental support for Gutenberg
 Author: Iceable Media
 Author URI: https://www.iceablethemes.com
 License: GNU General Public License v2 (GPLv2)
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Version: 1.0.8
+Version: 1.0
 Tags: one-column, two-columns, right-sidebar, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, blog, news, entertainment
 Text Domain: materia-lite
 
@@ -14,7 +14,7 @@ Materia Lite WordPress Theme by Iceable Themes | https://www.iceablethemes.com
 */
 
 /*
-Copyright © 2017 Iceable Media
+Copyright © 2018 Iceable Media
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
